cft/10-mappings.yaml
Parameters:

  Environment:
    Type: String
    Description: Choose the Environment
    Default: dev
    AllowedValues: 
      - dev
      - uat
      - prd

  VpcId:
    Type: AWS::EC2::VPC::Id

  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Choose a subnet that belongs to the selected VPC

  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Default: awar11-na

Mappings:
  EnvToInstanceType:
    dev: 
      InstanceType: t3.small
    uat:
      InstanceType: t3.small
    prd:
      InstanceType: c7i-flex.large

Resources:

  MySg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group created with CFT
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  MyFirstInstance:
    Type: AWS::EC2::Instance
    DependsOn: MySg
    Properties:
      ImageId: "{{resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64}}"
      SubnetId: !Ref SubnetId
      KeyName: !Ref KeyName
      InstanceType: !FindInMap [EnvToInstanceType, !Ref Environment, InstanceType]
      SecurityGroupIds:
        - !Ref MySg
      Tags:
        - Key: Name
          Value: !Sub "mapping-demo-${Environment}"
        - Key: project
          Value: Project-X

Outputs:
  MyEC2Id:
    Description: Instanceid is
    Value: !Ref MyFirstInstance
